Many chancge to attempt PUT, round about way works - delete orig row the add new row. Joined databases.

--- a/DataBoundApplatesunday/DataBoundApplatesunday/DataBoundApplatesunday.csproj
+++ b/DataBoundApplatesunday/DataBoundApplatesunday/DataBoundApplatesunday.csproj
@@ -187,6 +187,9 @@
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.18\lib\sl4-windowsphone71\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http.Formatting">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.1.0\lib\portable-wp8+netcore45+net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http.Primitives">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.18\lib\sl4-windowsphone71\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
