--- a/ujukebox/ujukebox.csproj
+++ b/ujukebox/ujukebox.csproj
@@ -324,9 +324,11 @@
     </Content>
     <None Include="Properties\PublishProfiles\ujukebox - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\ujukebox - FTP %283%29.pubxml" />
+    <None Include="Properties\PublishProfiles\ujukebox - FTP %284%29.pubxml" />
     <None Include="Properties\PublishProfiles\ujukebox - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\ujukebox - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\ujukebox - Web Deploy %283%29.pubxml" />
+    <None Include="Properties\PublishProfiles\ujukebox - Web Deploy %284%29.pubxml" />
     <None Include="Properties\PublishProfiles\ujukebox - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.0.3.js" />
