--- a/trunk/WP8jukebox/WP8jukebox/WP8jukebox.csproj
+++ b/trunk/WP8jukebox/WP8jukebox/WP8jukebox.csproj
@@ -115,6 +115,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Track.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\Venue.cs" />
