added binding to variable to display current venue selection issue after voting from chart then returning to playlist page (empty)

--- a/trunk/ujukebox/ujukebox.csproj
+++ b/trunk/ujukebox/ujukebox.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ujukeapiController.cs" />
     <Compile Include="Controllers\ujukeboxController.cs" />
+    <Compile Include="Controllers\voteApiController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
