--- a/ujukebox/ujukebox.csproj
+++ b/ujukebox/ujukebox.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ujukeapiController.cs" />
     <Compile Include="Controllers\ujukeboxController.cs" />
+    <Compile Include="Controllers\voteApiController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
