--- a/ujukebox/Web.config
+++ b/ujukebox/Web.config
@@ -18,6 +18,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ujukebox-20140101174158;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ujukebox-20140101174158.mdf" providerName="System.Data.SqlClient" />
     <add name="ujukeboxdbEntities" connectionString="metadata=res://*/Models.ujukebox.csdl|res://*/Models.ujukebox.ssdl|res://*/Models.ujukebox.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wri8lw57cj.database.windows.net;initial catalog=ujukeboxdb;user id=contactmanageradmin;password=Passw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ujukeboxdbEntities1" connectionString="metadata=res://*/Models.UjukeboxModel.csdl|res://*/Models.UjukeboxModel.ssdl|res://*/Models.UjukeboxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wri8lw57cj.database.windows.net;initial catalog=ujukeboxdb;user id=contactmanageradmin;password=Passw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ujukeboxdbEntities2" connectionString="metadata=res://*/ujukeboxl1.csdl|res://*/ujukeboxl1.ssdl|res://*/ujukeboxl1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wri8lw57cj.database.windows.net;initial catalog=ujukeboxdb;user id=contactmanageradmin;password=Passw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -45,19 +46,15 @@
     </pages>
   </system.web>
   <system.webServer>
-
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule"/>
+      <remove name="WebDAVModule" />
     </modules>
-    
-   <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" resourceType="Unspecified" requireAccess="Script"/>
-       
-
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" resourceType="Unspecified" requireAccess="Script" />
     </handlers>
   </system.webServer>
   <runtime>
