--- a/WP8jukeboxAPRv8/WP8jukebox/WP8jukebox.csproj
+++ b/WP8jukeboxAPRv8/WP8jukebox/WP8jukebox.csproj
@@ -115,6 +115,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\AVenue.cs" />
     <Compile Include="ViewModels\Track.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
